--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,5 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
+    <snippets src="snippets"/>
     <instance src="MPQ-Editor.tree"/>
 </ihp>
